@@ -1,24 +1,22 @@
 package com.redis.om.spring.search.stream.predicates.tag;
 
-import java.lang.reflect.Field;
 import java.util.List;
 import java.util.StringJoiner;
-import java.util.stream.Collectors;
 
 import com.redis.om.spring.metamodel.SearchFieldAccessor;
 import com.redis.om.spring.repository.query.QueryUtils;
 import com.redis.om.spring.search.stream.predicates.BaseAbstractPredicate;
 
-import io.redisearch.querybuilder.Node;
-import io.redisearch.querybuilder.QueryBuilder;
+import redis.clients.jedis.search.querybuilder.Node;
+import redis.clients.jedis.search.querybuilder.QueryBuilders;
 
 public class InPredicate<E, T> extends BaseAbstractPredicate<E, T> {
 
-  private List<String> values;
+  private final List<String> values;
 
   public InPredicate(SearchFieldAccessor field, List<String> list) {
     super(field);
-    this.values = list.stream().map(QueryUtils::escape).collect(Collectors.toList());
+    this.values = list.stream().map(QueryUtils::escape).toList();
   }
 
   public List<String> getValues() {
@@ -32,6 +30,6 @@ public class InPredicate<E, T> extends BaseAbstractPredicate<E, T> {
       sj.add(value.toString());
     }
 
-    return QueryBuilder.intersect(root).add(getSearchAlias(), "{" + sj.toString() + "}");
+    return QueryBuilders.intersect(root).add(getSearchAlias(), "{" + sj + "}");
   }
 }
